[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-gso-pipeline"
version = "1.0.0"
description = "GEO/GSO Article Generation Pipeline with Quality Scoring"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Paul Fils Rasolo", email = "contact@example.com"}
]
keywords = [
    "llm",
    "geo",
    "gso", 
    "seo",
    "article-generation",
    "content-generation",
    "ai-writing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "textstat>=0.7",
    "rich>=13.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "celery>=5.3",
    "redis>=5.0",
    "requests>=2.31",
    "anthropic>=0.18",
    "google-generativeai>=0.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
interactive = [
    "questionary>=2.0",
    "prompt-toolkit>=3.0",
]
docker = [
    "docker>=6.0",
]

[project.scripts]
geo-gso = "generate:main"

[project.urls]
Homepage = "https://github.com/memphisfils/geo-gso-pipeline"
Documentation = "https://github.com/memphisfils/geo-gso-pipeline/blob/main/README.md"
Repository = "https://github.com/memphisfils/geo-gso-pipeline"
Issues = "https://github.com/memphisfils/geo-gso-pipeline/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
